# python-basic

./: .gitignore  info.txt  rock-paper-scissor.py
Locust/: faq-product-api.py  get_tree.py  hr_recommendation.py  readme.txt
Networkx/: barabasi_albert_1.py  erdos_renyi_1.py  nutrients.ipynb  southern_women.ipynb
asyncio/: coroutine.ipynb  event-loop-1.ipynb  hello.py  quickstart_exe.py
basic/: a.txt  a_big_file.txt  account.txt  assert_1.py  chapter1_degree_centrality.py  circle.py  class_attributes.py  collocations.py  data_diff_lab_3.py  enumerate-1.py  file-io-lab.ipynb  forest-iris.py  fsc_announcement_1.py  gensim_keyword_extraction.py  gensim_keyword_extraction_2.py  gensim_keyword_extraction_3.py  hand-6-1.py  hand-7-1.py  hand-8-1.py  hand-9-1.py  immutable_types.py  iris-dataset.py  jieba_keyword_extraction.py  jieba_keyword_extraction_2.py  jieba_keyword_extraction_3.py  jieba_keyword_extraction_4.py  lab-20191115.ipynb  lab05.py  lab06.py  lab_05.txt  lark-helloworld.py  ldap-client-1.py  ldap-client-2.py  ldap3-client-1.py  ldap3-client-2.py  ldap3-client-3.py  maketrans-1.py  moby_01.txt  moby_01_clean.txt  mutable_types.py  (+29 more)
bhp/: .gitignore  ch02-netcat.py  ch02-proxy.py  ch02-rforward.py  ch02-ssh-cmd.py  ch02-ssh-rcmd.py  ch02-ssh-server.py  ch02-tcp-client-1.py  ch02-tcp-client-2.py  ch02-tcp-server-1.py  ch02-udp-client-1.py  test.txt
brute/: binary-search-template-3.py  bulls_and_cows.py  find-the-duplicate-number.py  leetcode-652-find-duplicate-subtrees.py  leetcode15-three-sum.py  (+14 more)
openpyxl/sql_to_excel/: main.py  pyproject.toml  query.csv
(+211 files in other folders)
